# robot_skills

./: CMakeLists.txt  README.md  package.xml  setup.py
samples/: testbot.py
shell/: console.py  setup.sh
src/robot_skills/: robot_factory.py  world_definition.py
src/robot_skills/util/: test_skill.py
src/uchile_skills/: context.py  robot_factory.py
src/uchile_skills/util/: test_skill.py
