<?xml version="1.0"?>
<package format="2">
    <!-- 
      <depend>             : build, export, and execution dependencies 
      <build_depend>       : pkgs needed at compile time (any file or library)
      <build_export_depend>: pkgs needed to build libraries against this pkg
      <exec_depend>        : pkgs needed to run this code. (e.g: shared libs)
      <test_depend>        : only additional deps for unit testing (e.g: gtest)
      <doc_depend>         : dependencies for documentation generation

      See also:
      - http://wiki.ros.org/catkin/package.xml
      - http://www.ros.org/reps/rep-0140.html
    -->


    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>robot_skills</name>
    <version>2.0.0</version>
    
    <description>The robot_skills package</description>

    <!-- team -->
    <maintainer email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</author>

    <!-- specific developers -->
    

    <!-- about and related repository -->
    <url type="website">http://robotica-uchile.amtc.cl/</url>
    <url type="bugtracker">https://github.com/uchile-robotics/robot_skills/issues</url>
    <url type="repository">https://github.com/uchile-robotics/robot_skills</url>

    <license>TODO</license>



    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- common ROS depends -->
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>


    <!-- === depends for skills === -->
    <depend>python-mock</depend>
    <depend>python-termcolor</depend>

    <export>
    </export>
  
</package>